# mcp_stock_calculator

./: README.md  pyproject.toml  requirements.txt  setup.py
.specstory/history/: 2025-06-26_14-17-fixing-import-error-in-python-script.md  2025-06-26_14-22-fixing-relative-import-error-in-python.md  2025-06-26_14-45-fixing-module-not-found-error.md  2025-06-26_14-51-fixing-circular-import-error-in-python.md  2025-06-26_14-53-fixing-circular-import-error-in-python.md  2025-06-26_15-52-修改计算器服务的代码.md  2025-06-26_15-56-分析-server-py-中的数学工具.md  2025-06-26_15-57-使用fastmcp库改写代码.md  2025-06-26_16-01-fix-import-error-in-stock-calculator.md  2025-06-26_16-13-fixing-attribute-error-in-fastmcp.md  2025-06-26_16-15-fixing-coroutine-warning-in-python-script.md  2025-06-26_16-24-补充接口说明的讨论.md
mcp_stock_calculator/: __init__.py
mcp_stock_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
