[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_stock_calculator"
version = "0.1.0"
description = "A stock calculator for MCP."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
packages = ["mcp_stock_calculator"] 